--- a/KeepSafe/res/values/strings.xml
+++ b/KeepSafe/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="ok">Ok</string>
+
+    <string name="preferences">Preferences</string>
     
 </resources>
