--- a/KeepSafe/res/values/strings.xml
+++ b/KeepSafe/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">KeepSafe</string>
+    <string name="app_name">keepsafe</string>
 
     <string name="pleasewait">Please wait</string>
     <string name="processing">Processing</string>
